--- a/LoveTaps/package.json
+++ b/LoveTaps/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-firebase/messaging": "^21.10.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.8",
     "@react-navigation/stack": "^7.0.13",
@@ -27,11 +28,13 @@
     "dotenv": "^16.4.7",
     "expo": "~52.0.11",
     "expo-blur": "~14.0.3",
+    "expo-build-properties": "~0.13.2",
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.4",
     "expo-device": "~7.0.2",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-image": "~2.0.5",
     "expo-linking": "~7.0.3",
     "expo-notifications": "~0.29.13",
     "expo-router": "~4.0.9",
@@ -53,8 +56,7 @@
     "react-native-screens": "^4.3.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2",
-    "expo-build-properties": "~0.13.2"
+    "react-native-webview": "13.12.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
