--- a/LoveTaps/app.json
+++ b/LoveTaps/app.json
@@ -15,8 +15,10 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "googleServicesFile": "./google-services.json",
-      "bundleIdentifier": "com.rebug2416.lovetaps"
+      "bundleIdentifier": "com.rebug2416.lovetaps",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
