--- a/LoveTaps/eas.json
+++ b/LoveTaps/eas.json
@@ -10,7 +10,14 @@
       }
     },
     "production": {
-      "autoIncrement": true
+      "android": {
+        "buildType": "apk",
+        "googleServicesFile": "./google-services.json",
+        "autoIncrement": true
+      },
+      "env": {
+        "EXPO_GOOGLE_SERVICES_FILE": "./google-services.json"
+      }
     }
   },
   "submit": {
